tests/repositories/snapshots/cargo_library/docker/Dockerfile-amd64.snap
---
source: tests/common/mod.rs
expression: content
---
FROM amd64/alpine
ADD cargo-rust-library /
ENTRYPOINT ["/cargo-rust-library"]
