tests/repositories/snapshots/cargo_library/docker/Dockerfile-arm64.snap
---
source: tests/common/mod.rs
expression: content
---
FROM arm64v8/alpine
ADD cargo-rust-library /
ENTRYPOINT ["/cargo-rust-library"]
